# audit-ledger

./: .gitignore  ARCHITECTURE.md  BETA_TEST_INVITE.md  CUSTOMER-HANDOVER.md  DEPLOYMENT.md  FUNDRAISING-UK.md  GETTING-STARTED.md  GO-TO-MARKET.md  HOW-IT-WORKS.md  INVESTOR-BRIEF.md  LAYMAN-GUIDE.md  LICENSE  ONE-PAGER.md  README.md  RUNBOOK.md  SETUP-AND-ARCHITECTURE.md  TENANT-GUIDE.md  VERSION-WALKTHROUGH.md  VERSIONS-AT-A-GLANCE.md  architecture-code-alignment_2.md  cloud-architecture-comparison.docx
apps/resume-screener/: .env.example  .gitignore  HOW-TO-RUN.md  README.md  pyproject.toml
apps/resume-screener/samples/: jd.txt  resume-junior.txt  resume.txt
apps/resume-screener/src/resume_screener/: __init__.py  __main__.py  cli.py  config.py  decisioner.py  human.py  ledger.py  scoring.py  synth.py
apps/resume-screener/tests/: test_decisioner.py  test_human.py  test_synth.py
dashboard/: HOW-TO-USE.md  demo-config.example.js  index.html
infra/cdk/: cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
infra/cdk/cdk.out/: AiAuditLedgerStack.assets.json  AiAuditLedgerStack.metadata.json  AiAuditLedgerStack.template.json  manifest.json  tree.json
infra/cdk/lambda/: adminContacts.ts  dlqConsumer.ts  ingest.ts  processor.ts  read.ts  (+3 more)
schemas/: ingestion.py  ingestion.ts
scripts/: run-tests.js  seed_demo.py
sdk/nodejs/: package.json
sdk/python/: pyproject.toml
sdk/python/ai_audit_ledger/: __init__.py  client.py  hashing.py  read_api.py
sdk/python/tests/: test_hashing.py  test_read_api_live.py
tests/: config.mjs  run-tests.mjs
(+29 files in other folders)
